prevent right-hand popovers from overflowing app

--- a/src/css/components/Popover.css
+++ b/src/css/components/Popover.css
@@ -109,6 +109,10 @@
     transform: translateY(0);
     transition-property: opacity, transform;
 
+    &--right-hand-side {
+      @apply letter:left-auto letter:right-0;
+    }
+
     &--collapsed {
       @apply invisible opacity-0;
       transform: translateY(-2rem);
